# nvim-rig

./: Cargo.toml
src/: agent_cache.rs  api_key.rs  completion.rs  completion_buffer.rs  error.rs  lib.rs
