[package]
name = "nvim-rig"
version = "0.1.0"
edition = "2024"

[dependencies]
rig-core = { version = "0.24.0", default-features = false, features = ["reqwest-rustls"] }
thiserror = "2.0.17"

nvim-api-helper = { path = "../nvim-api-helper" }
tokio = "1.48.0"
tracing = "0.1.41"
strum = { version = "0.27.2", features = ["derive"] }
futures = "0.3.31"
async-stream = "0.3.6"
serde_json = "1.0.145"
