[package]
name = "nvim-rig"
version = "0.1.0"
edition = "2024"

[dependencies]
eel = { version = "0.0.1", git = "https://github.com/blazej-jaworowski/eel" }
eel-nvim = { version = "0.0.1", git = "https://github.com/blazej-jaworowski/eel" }

rig-core = { version = "0.24.0", default-features = false, features = ["reqwest-rustls"] }
thiserror = "2.0.17"
tokio = "1.48.0"
tracing = "0.1.41"
strum = { version = "0.27.2", features = ["derive"] }
futures = "0.3.31"
async-stream = "0.3.6"
serde_json = "1.0.145"
itertools = "0.14.0"
derivative = "2.2.0"
async-trait = "0.1.89"
